Next
  - Fixed Host key (F11, F12) handling in Codepage 932 (Japanese Shift-JIS).
    (maron2000)
  - Fixed SSE PSADBW to match the Intel SDM. (fuel-pcbox) 
  - Bumped ESFMu to ver 1.2.6 (maron2000)
  - Fixed regression of adding a dot to CD labels when longer than 8 characters,
    required for games such as Descent 2 CD installer (maron2000)
  - Added Modeswitch toggle option (DieSkaarj)
  - Fixed glitch of DBCS character at the end of a line (maron2000)
  - Fixed dialog for showing error of loading language files (maron2000)
  - Removed two and 226 duplicate Chinese character mappings from code
    pages 950 and 951, respectively, ensuring more accurate Big5 and
    Big5-UAO character mappings for Chinese IME users. (1abcd)
  - Enabled changing drives mounted prior to switching to securemode (maron2000)
  - Enabled some messages to be translated in the translation files (maron2000)
  - Fixed fullscreen mode occasionally switched to windowed mode (maron2000)
  - Updated French translation (FredBezies)
  - Fixed blank screen when output=ttf on PC-98 mode (maron2000)
  - Fixed crash when switching from fullscreen to window mode in TTF output
    (maron2000)
  - Fixed mounting zip files with white space in their names failed (maron2000)
  - Fixed crash on reboot when output=ttf (maron2000)
  - Fixed blank BIOS screen when output=ttf (maron2000)
  - Fixed direct input of half-width kana (maron2000)
  - Fixed PC-98 INT 1Fh, AH=90h source and destination address (drachen6jp)
  - Fixed unnecessary trailing backslash in path name (maron2000)
  - Fixed SSE MOVSS, MOVHPS, UNPCKLPS, UNPCKHPS, and PSADBW as well as
    MMX PMULLW, PSUBUSB, and PSUBUSW, instruction implementations (fuel-pcbox)

2025.02.01
  - Added new experimental dosbox.conf option that turns off the
    A20 gate automatically if loading a COM/EXE file to a memory
    location below 64KB. Option is off by default. This is intended
    for the startup routines of programs that assume 8086 wraparound